--- a/src/public/index.html
+++ b/src/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Mega project</title>
+    <title>ES7 bootstrap project</title>
 </head>
 <body>
     <div id="list"></div>
