--- a/src/public/index.html
+++ b/src/public/index.html
@@ -5,6 +5,7 @@
     <title>ES7 bootstrap project</title>
 </head>
 <body>
+	<div id="form"></div>
     <div id="list"></div>
     <script src="/build/static/frontend.js"></script>
 </body>
