--- a/src/public/index.html
+++ b/src/public/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>ES7 bootstrap project</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
 </head>
 <body>
 	<div id="root"></div>
